--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,8 +19,12 @@
   }
 }
 
+html,
 body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  margin: 0;
+  padding: 0;
+  background-color: var(--black);
+  color: white;
+  font-family: "Poppins", sans-serif;
+  overflow: hidden;
 }
