--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,7 @@
 @import "tailwindcss";
+@import "swiper/css";
+@import "swiper/css/autoplay";
+@import "swiper/css/pagination";
 
 :root {
   --background: #ffffff;
@@ -26,5 +29,5 @@ body {
   background-color: var(--black);
   color: white;
   font-family: "Poppins", sans-serif;
-  overflow: hidden;
+  scroll-behavior: smooth;
 }
